--- a/nym-vpn-core/crates/nym-gateway-probe/Cargo.toml
+++ b/nym-vpn-core/crates/nym-gateway-probe/Cargo.toml
@@ -1,64 +1,84 @@
 [package]
 name = "nym-gateway-probe"
-version.workspace = true
-authors.workspace = true
-repository.workspace = true
-homepage.workspace = true
-documentation.workspace = true
-edition.workspace = true
-license.workspace = true
 build = "build.rs"
+edition = "2021"
+
+[workspace]
+
 
 [dependencies]
-anyhow.workspace = true
-base64.workspace = true
-bincode.workspace = true
-bs58.workspace = true
-bytes.workspace = true
-clap = { workspace = true, features = ["cargo", "derive"] }
-dirs.workspace = true
-dns-lookup = "2"
-futures.workspace = true
-hex.workspace = true
-log.workspace = true
-pnet_packet.workspace = true
-rand.workspace = true
-rust2go.workspace = true
-serde.workspace = true
-serde_json.workspace = true
-thiserror.workspace = true
-tokio = { workspace = true, features = [
+tokio-util = "*"
+tracing-subscriber = {version = "*", features = ["env-filter"]}
+tracing = "*"
+x25519-dalek = { version = "*", features = [
+    "reusable_secrets",
+    "static_secrets",
+] }
+anyhow = "*"
+base64 = "*"
+bincode = "*"
+bs58 = "*"
+bytes = "*"
+clap = { version = "*", features = ["cargo", "derive"] }
+cfg-if = "*"
+dirs = "*"
+dns-lookup = "*"
+futures = "*"
+hex = "*"
+log = "*"
+pnet_packet = "*"
+rand = "*"
+rust2go = "*"
+serde = {version = "*", features = ["derive"]}
+serde_json = "*"
+thiserror = "*"
+tokio = { version = "*", features = [
     "process",
     "rt-multi-thread",
     "fs",
     "sync",
     "macros",
 ] }
-tokio-util.workspace = true
-tracing-subscriber.workspace = true
-tracing.workspace = true
-x25519-dalek = { workspace = true, features = [
-    "reusable_secrets",
-    "static_secrets",
-] }
 
-nym-authenticator-requests.workspace = true
-nym-bin-common.workspace = true
-nym-client-core.workspace = true
-nym-crypto.workspace = true
-nym-config.workspace = true
-nym-connection-monitor = { path = "../nym-connection-monitor" }
-nym-gateway-directory = { path = "../nym-gateway-directory" }
-nym-ip-packet-client = { path = "../nym-ip-packet-client" }
-nym-authenticator-client = { path = "../nym-authenticator-client" }
-nym-wireguard-types.workspace = true
-nym-ip-packet-requests.workspace = true
-nym-sdk.workspace = true
-nym-task.workspace = true
-nym-topology.workspace = true
+
+# nym monorepo
+nym-authenticator-requests = { git = "https://github.com/nymtech/nym.git", branch = "develop" }
+nym-client-core = { git = "https://github.com/nymtech/nym.git", branch = "develop" }
+nym-crypto = { git = "https://github.com/nymtech/nym.git", branch = "develop" }
+nym-config = { git = "https://github.com/nymtech/nym.git", branch = "develop" }
+nym-wireguard-types = { git = "https://github.com/nymtech/nym.git", branch = "develop" }
+nym-ip-packet-requests = { git = "https://github.com/nymtech/nym.git", branch = "develop" }
+nym-sdk = { git = "https://github.com/nymtech/nym.git", branch = "develop" }
+nym-task = { git = "https://github.com/nymtech/nym.git", branch = "develop" }
+nym-topology = { git = "https://github.com/nymtech/nym.git", branch = "develop" }
+nym-bin-common = { git = "https://github.com/nymtech/nym.git", branch = "develop" }
+
+nym-authenticator-requests-magura = { git = "https://github.com/nymtech/nym.git", package = "nym-authenticator-requests", branch = "release/2024.13-magura" }
+nym-client-core-magura = { git = "https://github.com/nymtech/nym.git", package = "nym-client-core", branch = "release/2024.13-magura" }
+nym-crypto-magura = { git = "https://github.com/nymtech/nym.git", package = "nym-crypto", branch = "release/2024.13-magura" }
+nym-config-magura = { git = "https://github.com/nymtech/nym.git", package = "nym-config", branch = "release/2024.13-magura" }
+nym-wireguard-types-magura = { git = "https://github.com/nymtech/nym.git", package = "nym-wireguard-types", branch = "release/2024.13-magura" }
+nym-ip-packet-requests-magura = { git = "https://github.com/nymtech/nym.git", package = "nym-ip-packet-requests", branch = "release/2024.13-magura" }
+nym-sdk-magura = { git = "https://github.com/nymtech/nym.git", package = "nym-sdk", branch = "release/2024.13-magura" }
+nym-task-magura = { git = "https://github.com/nymtech/nym.git", package = "nym-task", branch = "release/2024.13-magura" }
+nym-topology-magura = { git = "https://github.com/nymtech/nym.git", package = "nym-topology", branch = "release/2024.13-magura" }
+nym-bin-common-magura = { git = "https://github.com/nymtech/nym.git", package = "nym-bin-common", branch = "release/2024.13-magura" }
+
+# nym-vpn-client
+nym-connection-monitor = { git = "https://github.com/nymtech/nym-vpn-client.git", branch = "main" }
+nym-gateway-directory = { git = "https://github.com/nymtech/nym-vpn-client.git", branch = "main" }
+nym-ip-packet-client = { git = "https://github.com/nymtech/nym-vpn-client.git", branch = "main" }
+nym-authenticator-client = { git = "https://github.com/nymtech/nym-vpn-client.git", branch = "main" }
+
+nym-connection-monitor-magura = { git = "https://github.com/nymtech/nym-vpn-client.git", package = "nym-connection-monitor", rev = "18e8d8f4ea72bdff001657034968b040ed9cf71a" }
+nym-gateway-directory-magura = { git = "https://github.com/nymtech/nym-vpn-client.git", package = "nym-gateway-directory", rev = "18e8d8f4ea72bdff001657034968b040ed9cf71a" }
+nym-ip-packet-client-magura = { git = "https://github.com/nymtech/nym-vpn-client.git", package = "nym-ip-packet-client", rev = "18e8d8f4ea72bdff001657034968b040ed9cf71a" }
+nym-authenticator-client-magura = { git = "https://github.com/nymtech/nym-vpn-client.git", package = "nym-authenticator-client", rev = "18e8d8f4ea72bdff001657034968b040ed9cf71a" }
+
+
 
 [build-dependencies]
-vergen = { workspace = true, default-features = false, features = [
+vergen = { version = "*", default-features = false, features = [
     "build",
     "git",
     "gitcl",
@@ -66,4 +86,4 @@ vergen = { workspace = true, default-features = false, features = [
     "cargo",
 ] }
 
-rust2go = { workspace = true, features = ["build"] }
+rust2go = { version = "*", features = ["build"] }
