--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -148,6 +148,7 @@ nym-http-api-client = { git = "https://github.com/nymtech/nym", branch = "releas
 nym-ip-packet-requests = { git = "https://github.com/nymtech/nym", branch = "release/2024.13-magura" }
 nym-node-requests = { git = "https://github.com/nymtech/nym", branch = "release/2024.13-magura" }
 nym-pemstore = { git = "https://github.com/nymtech/nym", branch = "release/2024.13-magura" }
+nym-service-provider-requests-common = { git = "https://github.com/nymtech/nym", branch = "release/2024.13-magura" }
 nym-sdk = { git = "https://github.com/nymtech/nym", branch = "release/2024.13-magura" }
 nym-task = { git = "https://github.com/nymtech/nym", branch = "release/2024.13-magura" }
 nym-topology = { git = "https://github.com/nymtech/nym", branch = "release/2024.13-magura" }
