--- a/nym-vpn-core/crates/nym-authenticator-client/Cargo.toml
+++ b/nym-vpn-core/crates/nym-authenticator-client/Cargo.toml
@@ -11,6 +11,8 @@ license.workspace = true
 [dependencies]
 nym-authenticator-requests.workspace = true
 nym-credentials-interface.workspace = true
+nym-crypto.workspace = true
+nym-service-provider-requests-common.workspace = true
 nym-sdk.workspace = true
 nym-wireguard-types.workspace = true
 bincode = { workspace = true }
