--- a/nym-vpn-core/crates/nym-authenticator-client/Cargo.toml
+++ b/nym-vpn-core/crates/nym-authenticator-client/Cargo.toml
@@ -10,8 +10,12 @@ license.workspace = true
 
 [dependencies]
 nym-authenticator-requests.workspace = true
+nym-credentials-interface.workspace = true
+nym-crypto.workspace = true
+nym-service-provider-requests-common.workspace = true
 nym-sdk.workspace = true
 nym-wireguard-types.workspace = true
+bincode = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 tracing.workspace = true
 thiserror.workspace = true
