--- a/nym-vpn-core/crates/nym-vpnd/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpnd/Cargo.toml
@@ -26,6 +26,8 @@ reqwest = { workspace = true, default-features = false, features = [
 ] }
 serde.workspace = true
 serde_json.workspace = true
+strum.workspace = true
+strum_macros.workspace = true
 sysinfo.workspace = true
 thiserror.workspace = true
 time.workspace = true
