--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -78,7 +78,7 @@ duct = "0.13"
 futures = "0.3.31"
 hex = "0.4"
 hickory-resolver = "0.24.1"
-http = "0.2.12"                                                     # version compatible with tonic
+http = "0.2.12"                                                                                       # version compatible with tonic
 ipnetwork = "0.16"
 itertools = "0.13.0"
 lazy_static = "1.5.0"
@@ -130,7 +130,6 @@ vergen = { version = "8.3.1", default-features = false }
 windows-sys = "0.52"
 x25519-dalek = "2.0"
 zeroize = "1.6.0"
-
 nym-authenticator-requests = { git = "https://github.com/nymtech/nym", branch = "develop" }
 nym-bandwidth-controller = { git = "https://github.com/nymtech/nym", branch = "develop" }
 nym-bin-common = { git = "https://github.com/nymtech/nym", branch = "develop" }
@@ -148,6 +147,7 @@ nym-http-api-client = { git = "https://github.com/nymtech/nym", branch = "develo
 nym-ip-packet-requests = { git = "https://github.com/nymtech/nym", branch = "develop" }
 nym-node-requests = { git = "https://github.com/nymtech/nym", branch = "develop" }
 nym-pemstore = { git = "https://github.com/nymtech/nym", branch = "develop" }
+nym-service-provider-requests-common = { git = "https://github.com/nymtech/nym", branch = "develop" }
 nym-sdk = { git = "https://github.com/nymtech/nym", branch = "develop" }
 nym-statistics-common = { git = "https://github.com/nymtech/nym", branch = "develop" }
 nym-task = { git = "https://github.com/nymtech/nym", branch = "develop" }
