added verbose log

--- a/.github/workflows/build-nym-vpn-app-windows-ev-sign.yml
+++ b/.github/workflows/build-nym-vpn-app-windows-ev-sign.yml
@@ -264,7 +264,7 @@ jobs:
           NETWORK_ENV_SELECT: ${{ inputs.dev_mode == true }}
         run: |
           if [ "${{ env.CARGO_TARGET }}" = "release" ]; then
-            npm run tauri build
+            npm run tauri build --verbose
           else
             npm run tauri build -- --debug
           fi
