--- a/.github/workflows/build-nym-vpn-app-windows-ev-sign.yml
+++ b/.github/workflows/build-nym-vpn-app-windows-ev-sign.yml
@@ -230,7 +230,6 @@ jobs:
         run: |
           curl -L0 https://www.ssl.com/download/codesigntool-for-linux-and-macos/ -o codesigntool.zip
           unzip codesigntool.zip
-          sed -i '1 i\echo "$@"' CodeSignTool.sh
 
       - name: Get EV certificate credential id
         working-directory: nym-vpn-app/src-tauri
@@ -265,6 +264,7 @@ jobs:
           RUSTFLAGS: "-L ${{ env.TAURI_SRC }}/x86_64-pc-windows-msvc -L ${{ env.TAURI_SRC }} -Clink-args=/LIBPATH:${{ env.TAURI_SRC }}/x64-${{ env.CPP_BUILD_MODES }}"
           NETWORK_ENV_SELECT: ${{ inputs.dev_mode == true }}
         run: |
+          npm run tauri info
           if [ "${{ env.CARGO_TARGET }}" = "release" ]; then
             npm run tauri build -- --verbose
           else
