--- a/nym-vpn-core/crates/nym-vpnc/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpnc/Cargo.toml
@@ -12,7 +12,7 @@ license.workspace = true
 [dependencies]
 anyhow.workspace = true
 bs58.workspace = true
-clap = { workspace = true, features = ["derive"] }
+clap = { workspace = true, features = ["derive", "wrap_help"] }
 parity-tokio-ipc.workspace = true
 prost-types.workspace = true
 prost.workspace = true
