--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -20,6 +20,7 @@ members = [
     "crates/nym-vpn-store",
     "crates/nym-vpnc",
     "crates/nym-vpnd",
+    "crates/nym-vpnd-types",
     "crates/nym-wg-gateway-client",
     "crates/nym-wg-go",
     "crates/nym-windows",
