--- a/nym-vpn-core/crates/nym-vpnd/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpnd/Cargo.toml
@@ -57,8 +57,9 @@ nym-vpn-account-controller = { path = "../nym-vpn-account-controller" }
 nym-vpn-api-client = { path = "../nym-vpn-api-client" }
 nym-vpn-lib = { path = "../nym-vpn-lib" }
 nym-vpn-network-config = { path = "../nym-vpn-network-config" }
-nym-vpn-proto = { path = "../nym-vpn-proto" }
+nym-vpn-proto = { path = "../nym-vpn-proto", features = ["conversions"]}
 nym-vpn-store = { path = "../nym-vpn-store" }
+nym-vpnd-types = { path = "../nym-vpnd-types" }
 
 [target.'cfg(windows)'.dependencies]
 windows-service = "0.7.0"
