--- a/.github/workflows/build-nym-vpn-app-windows-ev-sign.yml
+++ b/.github/workflows/build-nym-vpn-app-windows-ev-sign.yml
@@ -243,8 +243,8 @@ jobs:
         working-directory: nym-vpn-app/src-tauri
         shell: bash
         run: |
-          yq eval --inplace '.bundle.windows += {"signCommand": {"cmd": "bash", "args": ["-c", "/c/actions-runner/_work/nym-vpn-client/nym-vpn-client/nym-vpn-app/src-tauri/CodeSignTool.sh sign","-username ${{ secrets.SSL_COM_USERNAME }}","-password ${{ secrets.SSL_COM_PASSWORD }}","-credential_id ${{ steps.get_credential_ids.outputs.SSL_COM_CREDENTIAL_ID }}","-totp_secret ${{ secrets.SSL_COM_TOTP_SECRET }}","-input_file_path", "%1"]}}' tauri.conf.json
-          # yq eval --inplace '.bundle.windows += {"signCommand": {"cmd": "bash", "args": ["pwd"]}}' tauri.conf.json
+          # yq eval --inplace '.bundle.windows += {"signCommand": {"cmd": "bash", "args": ["-c", "/c/actions-runner/_work/nym-vpn-client/nym-vpn-client/nym-vpn-app/src-tauri/CodeSignTool.sh sign","-username lawrence@nymtech.net","-password wec\*eup\!RGC2ckv2abv","-credential_id ${{ steps.get_credential_ids.outputs.SSL_COM_CREDENTIAL_ID }}","-totp_secret ${{ secrets.SSL_COM_TOTP_SECRET }}","-input_file_path", "%1"]}}' tauri.conf.json
+          yq eval --inplace '.bundle.windows += {"signCommand": {"cmd": "bash", "args": ["-c", "/c/actions-runner/_work/nym-vpn-client/nym-vpn-client/nym-vpn-app/src-tauri/CodeSignTool.sh sign","-username=${{ secrets.SSL_COM_USERNAME }}","-password=${{ secrets.SSL_COM_PASSWORD }}","-credential_id=${{ steps.get_credential_ids.outputs.SSL_COM_CREDENTIAL_ID }}","-totp_secret=${{ secrets.SSL_COM_TOTP_SECRET }}","-input_file_path=", "%1"]}}' tauri.conf.json
           cat tauri.conf.json
 
       - name: Build tauri desktop client
