--- a/.github/workflows/build-nym-vpn-app-windows-ev-sign.yml
+++ b/.github/workflows/build-nym-vpn-app-windows-ev-sign.yml
@@ -238,12 +238,14 @@ jobs:
         run: |
           echo "SSL_COM_CREDENTIAL_ID=$(./CodeSignTool.sh get_credential_ids -username=${{ secrets.SSL_COM_USERNAME }} -password=${{ secrets.SSL_COM_PASSWORD }} | sed -n '1!p' | sed 's/- //')" >> "$GITHUB_OUTPUT"
 
-      # Credential_id is obtained with ./CodeSignTool.sh get_credential_ids -username=${{ env.SSL_COM_USERNAME }} -password=${{ env.SSL_COM_PASSWORD }}
+      # Credential_id is obtained with ./CodeSignTool.sh get_credential_ids -username=${{ env.SSL_COM_USERNAME }} -password=${{ env.SSL_COM_PASSWORD }} | sed -n '1!p' | sed 's/- //'
+      # Absolute path to CodeSignTool.sh is required since the tauri signcommand does not execute in the same context as the shell: bash
+      # -override required to override the existing file
       - name: Add custom sign command to tauri.conf.json
         working-directory: nym-vpn-app/src-tauri
         shell: bash
         run: |
-          yq eval --inplace '.bundle.windows += {"signCommand": {"cmd": "bash", "args": ["-c", "/c/actions-runner/_work/nym-vpn-client/nym-vpn-client/nym-vpn-app/src-tauri/CodeSignTool.sh","sign","-username ${{ secrets.SSL_COM_USERNAME }}","-password ${{ secrets.SSL_COM_PASSWORD }}","-credential_id ${{ steps.get_credential_ids.outputs.SSL_COM_CREDENTIAL_ID }}","-totp_secret ${{ secrets.SSL_COM_TOTP_SECRET }}","-input_file_path ", "%1", "-output_dir_path", "%1"]}}' tauri.conf.json
+          yq eval --inplace '.bundle.windows += {"signCommand": {"cmd": "bash", "args": ["-c", "/c/actions-runner/_work/nym-vpn-client/nym-vpn-client/nym-vpn-app/src-tauri/CodeSignTool.sh","sign","-username ${{ secrets.SSL_COM_USERNAME }}","-password ${{ secrets.SSL_COM_PASSWORD }}","-credential_id ${{ steps.get_credential_ids.outputs.SSL_COM_CREDENTIAL_ID }}","-totp_secret ${{ secrets.SSL_COM_TOTP_SECRET }}","-input_file_path", "%1","-override"]}}' tauri.conf.json
           cat tauri.conf.json
 
       - name: Build tauri desktop client
