--- a/.github/workflows/build-nym-vpn-app-windows-ev-sign.yml
+++ b/.github/workflows/build-nym-vpn-app-windows-ev-sign.yml
@@ -245,7 +245,8 @@ jobs:
         working-directory: nym-vpn-app/src-tauri
         shell: bash
         run: |
-          yq eval --inplace '.bundle.windows += {"signCommand": {"cmd": "bash", "args": ["-c", "\"/c/actions-runner/_work/nym-vpn-client/nym-vpn-client/nym-vpn-app/src-tauri/CodeSignTool.sh sign -username ${{ secrets.SSL_COM_USERNAME }} -password ${{ secrets.SSL_COM_PASSWORD }} -credential_id ${{ steps.get_credential_ids.outputs.SSL_COM_CREDENTIAL_ID }} -totp_secret ${{ secrets.SSL_COM_TOTP_SECRET }} -input_file_path","%1","-override\""]}}' tauri.conf.json
+          # yq eval --inplace '.bundle.windows += {"signCommand": {"cmd": "bash", "args": ["-c", "\"/c/actions-runner/_work/nym-vpn-client/nym-vpn-client/nym-vpn-app/src-tauri/CodeSignTool.sh sign -username ${{ secrets.SSL_COM_USERNAME }} -password ${{ secrets.SSL_COM_PASSWORD }} -credential_id ${{ steps.get_credential_ids.outputs.SSL_COM_CREDENTIAL_ID }} -totp_secret ${{ secrets.SSL_COM_TOTP_SECRET }} -input_file_path","%1","-override\""]}}' tauri.conf.json
+          yq eval --inplace '.bundle.windows += {"signCommand": {"cmd": "powershell", "args": ["-c", "C:\actions-runner\_work\nym-vpn-client\nym-vpn-client\nym-vpn-app\src-tauri\CodeSignTool.bat sign -username ${{ secrets.SSL_COM_USERNAME }} -password ${{ secrets.SSL_COM_PASSWORD }} -credential_id ${{ steps.get_credential_ids.outputs.SSL_COM_CREDENTIAL_ID }} -totp_secret ${{ secrets.SSL_COM_TOTP_SECRET }} -input_file_path","%1","-override"]}}' tauri.conf.json
           cat tauri.conf.json
 
       - name: Build tauri desktop client
@@ -257,7 +258,7 @@ jobs:
           APP_SENTRY_DSN: ${{ secrets.DESKTOP_JS_SENTRY_DSN }}
           RUSTFLAGS: "-L ${{ env.TAURI_SRC }}/x86_64-pc-windows-msvc -L ${{ env.TAURI_SRC }} -Clink-args=/LIBPATH:${{ env.TAURI_SRC }}/x64-${{ env.CPP_BUILD_MODES }}"
           NETWORK_ENV_SELECT: ${{ inputs.dev_mode == true }}
-          CODE_SIGN_TOOL_PATH: "/c/actions-runner/_work/nym-vpn-client/nym-vpn-client/nym-vpn-app/src-tauri/"
+          CODE_SIGN_TOOL_PATH: "C:\\actions-runner\\_work\\nym-vpn-client\\nym-vpn-client\\nym-vpn-app\\src-tauri\\"
         run: |
           npm run tauri info
           if [ "${{ env.CARGO_TARGET }}" = "release" ]; then
