--- a/.github/workflows/build-nym-vpn-app-windows-ev-sign.yml
+++ b/.github/workflows/build-nym-vpn-app-windows-ev-sign.yml
@@ -246,7 +246,7 @@ jobs:
         shell: bash
         run: |
           # yq eval --inplace '.bundle.windows += {"signCommand": {"cmd": "bash", "args": ["-c", "\"/c/actions-runner/_work/nym-vpn-client/nym-vpn-client/nym-vpn-app/src-tauri/CodeSignTool.sh sign -username ${{ secrets.SSL_COM_USERNAME }} -password ${{ secrets.SSL_COM_PASSWORD }} -credential_id ${{ steps.get_credential_ids.outputs.SSL_COM_CREDENTIAL_ID }} -totp_secret ${{ secrets.SSL_COM_TOTP_SECRET }} -input_file_path","%1","-override\""]}}' tauri.conf.json
-          yq eval --inplace '.bundle.windows += {"signCommand": {"cmd": "powershell", "args": [ "C:\actions-runner\_work\nym-vpn-client\nym-vpn-client\nym-vpn-app\src-tauri\CodeSignTool.bat sign -username ${{ secrets.SSL_COM_USERNAME }} -password ${{ secrets.SSL_COM_PASSWORD }} -credential_id ${{ steps.get_credential_ids.outputs.SSL_COM_CREDENTIAL_ID }} -totp_secret ${{ secrets.SSL_COM_TOTP_SECRET }} -input_file_path","%1","-override"]}}' tauri.conf.json
+          yq eval --inplace '.bundle.windows += {"signCommand": {"cmd": "powershell", "args": [ "Start-Process C:\\actions-runner\\_work\\nym-vpn-client\\nym-vpn-client\\nym-vpn-app\\src-tauri\\CodeSignTool.bat sign -username ${{ secrets.SSL_COM_USERNAME }} -password ${{ secrets.SSL_COM_PASSWORD }} -credential_id ${{ steps.get_credential_ids.outputs.SSL_COM_CREDENTIAL_ID }} -totp_secret ${{ secrets.SSL_COM_TOTP_SECRET }} -input_file_path","%1","-override"]}}' tauri.conf.json
           cat tauri.conf.json
 
       - name: Build tauri desktop client
