--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -96,6 +96,7 @@ rand = "0.8.5"
 rand_chacha = "0.3.1"
 reqwest = { version = "0.11.27", default-features = false }
 rust2go = "0.3.16"
+semver = "1.0.23"
 serde = "1.0"
 serde_json = "1.0"
 sha2 = "0.10"
