--- a/nym-vpn-core/crates/nym-authenticator-client/Cargo.toml
+++ b/nym-vpn-core/crates/nym-authenticator-client/Cargo.toml
@@ -22,3 +22,4 @@ thiserror.workspace = true
 tokio.workspace = true
 tracing-subscriber.workspace = true
 futures.workspace = true
+semver.workspace = true
