--- a/.github/workflows/build-nym-vpn-app-windows-ev-sign.yml
+++ b/.github/workflows/build-nym-vpn-app-windows-ev-sign.yml
@@ -245,7 +245,6 @@ jobs:
         working-directory: nym-vpn-app/src-tauri
         shell: bash
         run: |
-          # yq eval --inplace '.bundle.windows += {"signCommand": {"cmd": "bash", "args": ["-c", "\"/c/actions-runner/_work/nym-vpn-client/nym-vpn-client/nym-vpn-app/src-tauri/CodeSignTool.sh sign -username ${{ secrets.SSL_COM_USERNAME }} -password ${{ secrets.SSL_COM_PASSWORD }} -credential_id ${{ steps.get_credential_ids.outputs.SSL_COM_CREDENTIAL_ID }} -totp_secret ${{ secrets.SSL_COM_TOTP_SECRET }} -input_file_path","%1","-override\""]}}' tauri.conf.json
           yq eval --inplace '.bundle.windows +=
           {
             "signCommand": {
@@ -257,30 +256,13 @@ jobs:
                 "-password ${{ secrets.SSL_COM_PASSWORD }}",
                 "-credential_id ${{ steps.get_credential_ids.outputs.SSL_COM_CREDENTIAL_ID }}",
                 "-totp_secret ${{ secrets.SSL_COM_TOTP_SECRET }}",
+                "-program_name NymVPN",
                 "-input_file_path",
                 "%1",
                 "-override"
               ]
             }
           }' tauri.conf.json
-          # yq eval --inplace '.bundle.windows +=
-          # {
-          #   "signCommand": {
-          #     "cmd": "powershell",
-          #     "args": [
-          #       "Start-Process",
-          #       "${{ github.workspace }}\nym-vpn-app\src-tauri\CodeSignTool.bat",
-          #       "sign",
-          #       "-username ${{ secrets.SSL_COM_USERNAME }}",
-          #       "-password ${{ secrets.SSL_COM_PASSWORD }}",
-          #       "-credential_id ${{ steps.get_credential_ids.outputs.SSL_COM_CREDENTIAL_ID }}",
-          #       "-totp_secret ${{ secrets.SSL_COM_TOTP_SECRET }}",
-          #       "-input_file_path",
-          #       "%1",
-          #       "-override"
-          #     ]
-          #   }
-          # }' tauri.conf.json
           cat tauri.conf.json
 
       - name: Build tauri desktop client
