--- a/nym-vpn-app/src-tauri/Cargo.toml
+++ b/nym-vpn-app/src-tauri/Cargo.toml
@@ -45,6 +45,7 @@ parity-tokio-ipc = "0.9.0"
 tower = "0.4.8"
 rust_iso3166 = "0.1"
 dirs = "5.0.1"
+semver = "1.0"
 
 # nym deps
 nym-vpn-proto = { path = "../../nym-vpn-core/crates/nym-vpn-proto" }
