--- a/nym-vpn-app/src-tauri/Cargo.toml
+++ b/nym-vpn-app/src-tauri/Cargo.toml
@@ -15,6 +15,7 @@ edition = "2021"
 [build-dependencies]
 tauri-build = { version = "2.0.0", features = [] }
 build-info-build = "0.0.39"
+toml = "0.8.5"
 
 [dependencies]
 tauri = { version = "2.1.1", features = ["tray-icon", "image-png"] }
