enable amnezia by default

--- a/nym-vpn-core/crates/nym-vpn-lib/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-lib/Cargo.toml
@@ -103,5 +103,6 @@ vergen = { workspace = true, default-features = false, features = [
 ] }
 
 [features]
+default = ["amnezia"]
 metrics-server = ["nym-client-core/metrics-server"]
 amnezia = ["nym-wg-go/amnezia"]
