Add santas menu

--- a/nym-vpn-apple/NymVPNDaemon/Resources/Info.plist
+++ b/nym-vpn-apple/NymVPNDaemon/Resources/Info.plist
@@ -2,17 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>SUPublicEDKey</key>
-	<string>9OobPkT0p5WGp0wf2aSbADivVllEKZaz0gKhElMocU0=</string>
-	<key>SUFeedURL</key>
-	<string>https://nymtech.net/.wellknown/macos-vpn/appcast.xml</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
-	<key>SMPrivilegedExecutables</key>
-	<dict>
-		<key>net.nymtech.vpn.helper</key>
-		<string>identifier &quot;net.nymtech.vpn.helper&quot; and anchor apple generic and certificate 1[field.1.2.840.113635.100.6.2.6] /* exists */ and certificate leaf[field.1.2.840.113635.100.6.1.13] /* exists */ and certificate leaf[subject.OU] = VW5DZLFHM5</string>
-	</dict>
 	<key>CFBundleDisplayName</key>
 	<string>NymVPN</string>
 	<key>CFBundleExecutable</key>
@@ -29,7 +20,18 @@
 	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>IsCiBuild</key>
+	<string>$(IS_CI_BUILD)</string>
 	<key>NSHumanReadableCopyright</key>
 	<string></string>
+	<key>SMPrivilegedExecutables</key>
+	<dict>
+		<key>net.nymtech.vpn.helper</key>
+		<string>identifier "net.nymtech.vpn.helper" and anchor apple generic and certificate 1[field.1.2.840.113635.100.6.2.6] /* exists */ and certificate leaf[field.1.2.840.113635.100.6.1.13] /* exists */ and certificate leaf[subject.OU] = VW5DZLFHM5</string>
+	</dict>
+	<key>SUFeedURL</key>
+	<string>https://nymtech.net/.wellknown/macos-vpn/appcast.xml</string>
+	<key>SUPublicEDKey</key>
+	<string>9OobPkT0p5WGp0wf2aSbADivVllEKZaz0gKhElMocU0=</string>
 </dict>
 </plist>
